build_error.txt
cargo :     Checking AgroCLI v1.2.0 
(C:\Users\setia\Downloads\AgroCLI)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
build_error.txt -Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (    Checking Ag...nloads\AgroCLI):S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
error[E0425]: cannot find value 
`humidity_f32` in this scope
   --> src\db\mod.rs:256:32
    |
256 |             let humidity_f32 = 
humidity_f32 = humidity as f32;
    |                                
^^^^^^^^^^^^ help: a local variable with a 
similar name exists: `humidity`

For more information about this error, try 
`rustc --explain E0425`.
error: could not compile `AgroCLI` (bin 
"AgroCLI") due to 1 previous error
